Fixed bug in [course_media] overriding default media setting for listing pages. Fixing bug with Assets.svg file not showing cross-bar on add icon. Updated CSS for .add-element

--- a/css/admin_coursepress_page_course_details.css
+++ b/css/admin_coursepress_page_course_details.css
@@ -63,17 +63,26 @@
     text-align: center;
     padding-bottom: 5px;
     margin-bottom: 10px;
-    border: 1px solid #fff;
+/*    border: 1px solid #fff;*/
     cursor: pointer;
     position: relative;
+	
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)"; /* IE8 */
+    filter: alpha(opacity=70); /* IE 5-7 */
+    opacity: 0.7;	
 }
 
 .elements-holder .input-element:hover,
 .elements-holder .output-element:hover{
-    border: 1px solid #dddddd;
+/*    border: 1px solid #dddddd;
     -moz-box-shadow:    1px 1px 1px 1px #f3f3f3;
     -webkit-box-shadow: 1px 1px 1px 1px #f3f3f3;
-    box-shadow:         1px 1px 1px 1px #f3f3f3;
+    box-shadow:         1px 1px 1px 1px #f3f3f3; */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* IE8 */
+    filter: alpha(opacity=100); /* IE 5-7 */
+    opacity: 1.0;
+
+	
 }
 
 .elements-holder .element-label{
@@ -99,7 +108,7 @@
     width: 13px;
     height: 13px;
     top: -7px;
-    right: -7px;
+    left: 60%;
     display: none;
 }
 
